--- a/app/views/skus/create.html
+++ b/app/views/skus/create.html
@@ -1,4 +1,4 @@
-<div class="box-header">
+<div class="box-header" ng-init="initSkus()">
     <h2><i ng-class="currentView.icon"></i><span class="break"></span>
         <span ng-show='!entity.id'>进货与核销</span>
     </h2>
@@ -6,7 +6,7 @@
         <a ng-click="cancelEdit()" class="btn-close"><i class="fa fa-times"></i></a>
     </div>
 </div>
-<div class="box-content" ng-init="initSkus()">
+<div class="box-content" ng-init="checkShopManger()">
     <form class="form-horizontal" role="form" name="editForm">
         <div class="form-group" style="height: 30px;">
         </div>
@@ -86,4 +86,39 @@
         </div>
     </form>
 </div>
+
+<!--START: 新增店长-->
+<script type="text/ng-template" id="createShopManger.html">
+    <div class="modal-header">
+        <h3 style="color: #3c763d;">新增店长 <span style="text-align: center;color: red;">发现您尚未创建店长，请先创建该店店长</span></h3>
+    </div>
+    <div class="modal-body">
+        <div class="form-group has-success has-feedback">
+            <label class="control-label" for="inputSuccess2">姓名</label>
+            <input type="text" class="form-control" id="inputSuccess2" ng-model="employee.name">
+        </div>
+        <div class="form-group has-success has-feedback">
+            <label class="control-label" for="inputSuccess2">工号</label>
+            <input type="text" class="form-control" id="inputSuccess2" ng-model="employee.jobNumber">
+        </div>
+        <div class="form-group has-success has-feedback">
+            <label class="control-label" for="inputSuccess2">手机号</label>
+            <input type="text" class="form-control" id="inputSuccess2" ng-model="employee.phone">
+        </div>
+        <div class="form-group has-success has-feedback">
+            <label class="control-label" for="inputSuccess2">身份证号</label>
+            <input type="text" class="form-control" id="inputSuccess2" ng-model="employee.idcard">
+        </div>
+        <div style="height: 50px;">
+            <div ng-if="errContent.msg" class="alert alert-danger" style="text-align: center;">
+                <span ng-bind="errContent.msg"></span>
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">保存</button>
+        <button class="btn btn-warning" ng-click="cancel()">取消</button>
+    </div>
+</script>
+<!--End: 新增店长-->
 
