Fixed 去除了库存中有关删除的UI Close ##324

--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -18,7 +18,7 @@
       <div class="col-xs-2">
         <div class="box-icon">
           <!--START:operator for deletes-->
-          <a href="" ng-click="showCheckbox()" title="批量删除">
+          <a href="" ng-click="showCheckbox()" title="批量删除" ng-hide="hideManyDel">
             <i class="fa fa-trash-o"></i>
           </a>
           <!--END:operator for deletes-->
