Add: 门店开业资源（桌子）微信二维码管理
close extensivepro/exprocrm#342

--- a/app/views/shop/edit.html
+++ b/app/views/shop/edit.html
@@ -69,6 +69,7 @@
             <div class="col-lg-2">服务能力</div>
             <div class="col-lg-2">代号</div>
             <div class="col-lg-2">代号名</div>
+            <div class="col-lg-2">微信编号</div>
         </div>
         <div class="row" ng-repeat="obj in entity.openRes">
             <div class="col-lg-2">
@@ -85,6 +86,9 @@
             </div>
             <div class="col-lg-2">
                 <input class="form-control"  type="text" ng-model="obj.codename">
+            </div>
+            <div class="col-lg-2">
+                <input class="form-control"  type="text" ng-model="obj.sceneID">
             </div>
         </div>
     </div>
