--- a/app/views/members/profile.html
+++ b/app/views/members/profile.html
@@ -31,7 +31,7 @@
                   <h4 ng-if="!entity.deliveryAddress.length">当前会员暂无地址！</h4>
                   <div class="row" ng-repeat="obj in entity.deliveryAddress">
                       <div class="col-lg-2"><h4>{{obj.address}}</h4></div>
-                      <div class="col-lg-2"><h4>{{obj.name}}</h4></div>
+                      <div class="col-lg-2"><h4>{{obj.recipient}}</h4></div>
                       <div class="col-lg-2"><h4>{{obj.phone}}</h4></div>
                   </div>
               </td>
