--- a/app/views/members/edit.html
+++ b/app/views/members/edit.html
@@ -1,4 +1,13 @@
 <div class="form-group">
+    <label class="col-lg-2 control-label">编码</label>
+    <div class="col-lg-6">
+        <div class="input-group">
+            <input class="form-control" name="code" type="text" ng-model="entity.code">
+            <span class="input-group-addon"><i class="fa fa-circle"></i></span>
+        </div>
+    </div>
+</div>
+<div class="form-group">
     <label class="col-lg-2 control-label">姓名</label>
     <div class="col-lg-6">
         <div class="input-group">
@@ -11,7 +20,7 @@
     <label class="col-lg-2 control-label">手机</label>
     <div class="col-lg-6">
         <div class="input-group">
-            <input class="form-control" name="phone" type="text" ng-model="entity.phone" ng-pattern="patternForTelephone">
+            <input class="form-control" name="phone" type="text" ng-model="entity.phone" ng-pattern="patternForPhone">
             <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
         </div>
     </div>
@@ -23,7 +32,7 @@
     <label class="col-lg-2 control-label">邮箱</label>
     <div class="col-lg-6">
         <div class="input-group">
-            <input class="form-control" name="email" type="email" ng-model="entity.email">
+            <input class="form-control" name="email" type="email" ng-model="entity.email" ng-pattern="patternForEmail">
             <span class="input-group-addon"><i class="fa fa-circle-o"></i></span>
         </div>
     </div>
@@ -39,7 +48,7 @@
             <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.address" ng-repeat="obj in entity.deliveryAddress">
             </div>
             <div class="col-lg-2">收货人
-            <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.name" ng-repeat="obj in entity.deliveryAddress">
+            <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.recipient" ng-repeat="obj in entity.deliveryAddress">
             </div>
             <div class="col-lg-2">电话
             <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.phone" ng-repeat="obj in entity.deliveryAddress">
@@ -50,7 +59,7 @@
             <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.address" ng-repeat="obj in entity.deliveryAddress">
             </div>
             <div class="col-lg-2">收货人
-            <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.name" ng-repeat="obj in entity.deliveryAddress">
+            <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.recipient" ng-repeat="obj in entity.deliveryAddress">
             </div>
             <div class="col-lg-2">电话
             <input style="margin-top: 10px" class="form-control"  type="text" ng-model="obj.phone" ng-repeat="obj in entity.deliveryAddress">
