--- a/app/views/merchant/edit.html
+++ b/app/views/merchant/edit.html
@@ -3,7 +3,7 @@
         <span ng-show='!!entity.id'>{{currentView.name}} - 设置</span>
     </h2>
     <div class="box-icon">
-        <a ng-click="cancelEdit()" class="btn-close"><i class="fa fa-times"></i></a>
+        <a ng-click="cancel()" class="btn-close"><i class="fa fa-times"></i></a>
     </div>
 </div>
 <div class="box-content">
