Fixed 订单流水刷选 Close #329

--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -23,7 +23,7 @@
 
             <div class="col-lg-6">
                 <select class="form-control" ng-model="entity.tags"
-                        ng-options="tag for tag in merchantItemTags" style="display: inline-block"></select>
+                        ng-options="tag for tag in merchantItemTags"></select>
             </div>
             <div class="col-lg-2">
                 <button class="btn btn-info" ng-click="open()" title="新建标签"><i class="fa fa-plus"></i>新建</button>
