--- a/app/views/basicList.html
+++ b/app/views/basicList.html
@@ -87,8 +87,9 @@
       <!--START: operator for search-->
       <div class="col-lg-3">
       <div class="btn-group" ng-if="isBtnGroup">
-          <div style="display: inline" ng-repeat="btn in btns">
-              <button type="button" class="btn btn-primary" ng-click="filter(btn.key)">{{btn.value}}</button>
+          <div style="display: inline">
+              <select class="form-control" ng-model="currentBtn.btn"
+                      ng-options="btn as btn.value for btn in btns"></select>
           </div>
       </div>
         <form class="form-search" ng-if="!isBtnGroup">
