--- a/app/views/home.html
+++ b/app/views/home.html
@@ -62,7 +62,7 @@
 <script type="text/ng-template" id="regModal.html">
     <div style="">
     <div class="modal-header" style="">
-        <h2 style="font-size: 24px; color: #008000">注册</h2>
+        <h2 style="font-size: 24px; color: #008000">注册<span ng-show="alertReg.msg" style="margin-left: 30px;"><span style="background-color: transparent" ng-class="alertReg.class" ng-bind="alertReg.msg"></span></span></h2>
     </div>
     <div class="modal-body" style="margin: 0px;padding: 0px;">
         <div class="login-box" style="width: 550px;margin: 0 auto;padding: 0px;">
@@ -106,11 +106,11 @@
                     </div>
                 </div>
                 <!--START: div for alert-->
-                <div class="row" ng-show="alertReg.msg">
+<!--                <div class="row" ng-show="alertReg.msg">
                     <div class="col-lg-12" style="text-align: center;">
                         <div ng-class="alertReg.class"><span ng-bind="alertReg.msg"></span></div>
                     </div>
-                </div>
+                </div>-->
                 <!--END: div for alert-->
             </form>
         </div>
@@ -118,3 +118,85 @@
     </div>
 </script>
 <!--End: Modal for reg-->
+
+<!--START: Modal for createMerchant-->
+<script type="text/ng-template" id="createMerchantModal.html">
+    <div style="" ng-init="initErrContent()">
+        <div class="modal-header" style="">
+            <h2 style="font-size: 24px; color: #008000">第一步：新建商户<span ng-show="errContent.msg" style="margin-left: 30px;"><span  style="text-align: right; color: red;" ng-bind="errContent.msg"></span></span></h2>
+        </div>
+        <div class="modal-body" style="margin: 0px;padding: 0px;">
+            <div class="login-box" style="width: 550px;margin: 0 auto;padding: 0px;margin-top: 50px;">
+                <form ng-model="regMerchant" novalidate method="post" name="register_form" class="form-horizontal wt-form" ng-submit="ok()"  ui-keypress="{13:'ok($event)'}" id="form">
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label" style="font-size: 16px;">商户简称：</label>
+                        <div class="col-lg-9">
+                            <input class="form-control" ng-model="regMerchant.name" style="color: #555!important;" type="text"
+                                   required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label" style="font-size: 16px;">商户全称：</label>
+                        <div class="col-lg-9">
+                            <input class="form-control" ng-model="regMerchant.fullName" style="color: #555!important;" type="text"
+                                   required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label" style="font-size: 16px;">商户电话：</label>
+                        <div class="col-lg-9">
+                            <input class="form-control" style="color: #555!important;" type="text"
+                                   name="password"  id="p1" ng-model="regMerchant.telephone"
+                                   required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="" style="margin: 0 auto; text-align: center;">
+                            <button type="submit" class="btn btn-primary btn-lg" style="border-radius:10px;">确定</button>
+                            <button type="button" class="btn btn-warning btn-lg" style="border-radius:10px;" ng-click="cancel()">取消</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</script>
+<!--End: Modal for createMerchant-->
+
+<!--START: Modal for createShop-->
+<script type="text/ng-template" id="createShopModal.html">
+    <div style="" ng-init="initErrContent()">
+        <div class="modal-header" style="">
+            <h2 style="font-size: 24px; color: #008000">第二步：新建商店<span ng-show="errContent.msg" style="margin-left: 30px;"><span style="text-align: right; color: red;" ng-bind="errContent.msg"></span></span></h2>
+        </div>
+        <div class="modal-body" style="margin: 0px;padding: 0px;">
+            <div class="login-box" style="width: 550px;margin: 0 auto;padding: 0px;margin-top: 50px;">
+                <form ng-model="regShop" novalidate method="post" name="register_form" class="form-horizontal wt-form" ng-submit="ok()"  ui-keypress="{13:'ok($event)'}" id="form">
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label" style="font-size: 16px;">商店编码：</label>
+                        <div class="col-lg-9">
+                            <input class="form-control" ng-model="regShop.code" style="color: #555!important;" type="text"
+                                   required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label" style="font-size: 16px;">商店名称：</label>
+                        <div class="col-lg-9">
+                            <input class="form-control" ng-model="regShop.name" style="color: #555!important;" type="text"
+                                   required/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="" style="margin: 0 auto; text-align: center;">
+                            <button type="submit" class="btn btn-primary btn-lg" style="border-radius:10px;">确定</button>
+                            <button type="button" class="btn btn-warning btn-lg" style="border-radius:10px;" ng-click="cancel()">取消</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</script>
+<!--End: Modal for createMerchant-->
