--- a/app/views/item/itemProfile.html
+++ b/app/views/item/itemProfile.html
@@ -1,10 +1,11 @@
+
 <div class="box-header">
 	<h2><i ng-class="currentView.icon"></i><span class="break"></span>{{currentView.name}} - 详情</h2>
 	<div class="box-icon">
 		<a ng-click="showList()" class="btn-close"><i class="fa fa-times"></i></a>
 	</div>
 </div>
-<div class="box-content" style="overflow-x: auto; overflow-y: auto; height:550px;">
+<div class="box-content" style="">
 	<div class="col-lg-12">
 		<a ng-repeat="shortcut in profileShortcuts" ng-class="shortcut.class" ng-click="operateFunc(entity, shortcut.op)">
 			<i ng-class="shortcut.icon" />
@@ -15,7 +16,6 @@
 	<div class="col-lg-12">
     <div class="col-lg-1 col-md-2 col-xs-6" />
 		<div class="col-lg-1 col-md-2 col-xs-6" ng-show="profileAvatar">
-			<img ng-src={{profileAvatar}} alt="Avatar" class="img-circle">
 		</div>
 		<div class="col-lg-8 col-md-10 col-xs-12">
 			<table class="table table-striped">
@@ -27,15 +27,22 @@
 							<h4 ng-if="!field.value" ng-class="entity.fieldClass[field.name]">{{valueOfKeyString(entity, field.name)}}</h4>
 						</td>
 					</tr>
-                    <tr ng-repeat="img in imgs">
-                        <td class="center"><h4>图片详情：</h4></td>
-                        <td class="center">
-                            <img ng-src="{{img}}">
-                        </td>
+                    <tr>
+                        <td>图片：</td>
+                        <td><span ng-if="!imgs.length">该商品暂无图片</span></td>
                     </tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
+    <div class="row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+            <div style="margin-left: 20px;">
+                <img  ng-src="{{img}}" ng-repeat="img in imgs" style="display: inline-block; width: 200px; height: 200px;">
+            </div>
+        </div>
+    </div>
 	<div class="clearfix"></div>
 </div>
+
