--- a/app/views/shop/edit.html
+++ b/app/views/shop/edit.html
@@ -58,7 +58,10 @@
 </div>
 <div class="form-group">
     <label class="col-lg-2 control-label">开业资源</label>
-    <div class="col-lg-2" style="margin-top: 7px;"><a class="" style="cursor: pointer; color: #36a9e1" ng-click="editAddRes()"><i class="fa fa-plus"></i>新增</a></div>
+    <div class="col-lg-2" style="margin-top: 7px;">
+        <a class="" style="cursor: pointer; color: #36a9e1" ng-click="editAddRes()"><i class="fa fa-plus"></i>新增</a>
+        <a class="" style="cursor: pointer; color: #36a9e1; margin-left: 5px;" ng-click="minusAddRes()"><i class="fa fa-minus"></i>减少</a>
+    </div>
 </div>
 <div class="form-group">
     <label class="col-lg-2 control-label"></label>
