--- a/app/views/analysis/dailyReport/dayBillReportAnalysis.html
+++ b/app/views/analysis/dailyReport/dayBillReportAnalysis.html
@@ -1,20 +1,44 @@
-<div class="row" ng-controller="DayBillReportController" ng-init="init()">
+<div class="row" ng-controller="DayBillReportController">
     <div class="row" style="padding-left: 15px; padding-right: 15px">
         <div class="box">
             <div class="box-header">
-                <h2>
-                    <i ng-class="currentView.icon"></i>
-                    <span class="break"></span>
-                    {{currentView.name}}
-                </h2>
+                <div class="row">
+                    <div class="col-xs-4">
+                        <ol class="breadcrumb"
+                            style="background-color: #36a9e1; margin: 0px; padding: 0px; padding-left: 0px; margin-bottom: 0px; margin-top: 8px; margin-left: 15px;">
+                            <li><a style="color: #fff"><span ng-bind="currentViewParentName"></span></a></li>
+
+                            <li><a style="color: #fff"> <span ng-bind="currentView.name"></span></a></li>
+                        </ol>
+                    </div>
+                    <div class="col-xs-6"></div>
+                    <div class="col-xs-2">
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="box-content">
+                    <div class="row" ng-init="initDate()">
+                        <div class="col-lg-4"></div>
+                        <div class="col-lg-4">
+                            <p class="input-group">
+                                <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" datepicker-options="dateOptions"  close-text="关闭" />
+                                  <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                  </span>
+                            </p>
+                        </div>
+                        <div class="col-lg-4"></div>
+                    </div>
             </div>
             <div class="box-content" ng-init="getData()">
                 <div class="row">
-                    <div class="col-lg-1"></div>
+                    <div class="col-lg-1">
+                    </div>
                     <div class="col-lg-10">
                         <div class="row">
                             <div class="col-lg-4 col-sm-4">
-
                                 <div class="smallchart darkGreen box mobileHalf">
                                     <div class="title" style="font-size: 30px;">营业额</div>
                                     <div class="content" style="padding: 30px;">
@@ -53,19 +77,35 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><!--/col-->
+                            </div>
                             <div class="col-lg-4 col-sm-4">
                                 <div class="smallchart red box mobileHalf">
                                     <div class="title" style="font-size: 30px;">现金流</div>
                                     <div class="content" style="padding: 30px;">
                                         <div class="chart-stat">
-                                            <div class="chart white" style="height: 40px;"></div>
+                                            <div class="chart white" style="height: 40px;">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <span class="label label-primary" style="font-size: 15px;">现金支付:</span>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <span class="label label-info" style="font-size: 15px;" ng-bind="cash.cash"></span>
+                                                    </div>
+                                                </div>
+                                                <div class="row" style="margin-top: 10px;">
+                                                    <div class="col-lg-6">
+                                                        <span class="label label-primary" style="font-size: 15px;">微信支付:</span>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <span class="label label-info" style="font-size: 15px;" ng-bind="cash.weixin"></span>
+                                                    </div>
+                                                </div>
+
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-
-                            </div><!--/col-->
-
+                            </div>
                             <div class="col-lg-4 col-sm-4">
                                 <div class="smallchart blue box mobileHalf">
                                     <div class="title" style="font-size: 30px;">利润</div>
@@ -75,7 +115,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><!--/col-->
+                            </div>
 
                         </div>
                     </div>
