--- a/app/views/analysis/dailyReport/dayBillReportAnalysis.html
+++ b/app/views/analysis/dailyReport/dayBillReportAnalysis.html
@@ -111,12 +111,20 @@
                                     <div class="title" style="font-size: 30px;">利润</div>
                                     <div class="content" style="padding: 30px;">
                                         <div class="chart-stat">
-                                            <div class="chart white" style="height: 40px;"></div>
+                                            <div class="chart white" style="height: 40px;">
+                                                <div class="row">
+                                                    <div class="col-lg-6">
+                                                        <span class="label label-primary" style="font-size: 15px;">毛利润:</span>
+                                                    </div>
+                                                    <div class="col-lg-6">
+                                                        <span class="label label-info" style="font-size: 15px;" ng-bind="profit"></span>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                     <div class="col-lg-1"></div>
