--- a/app/views/orders/profile.html
+++ b/app/views/orders/profile.html
@@ -16,11 +16,11 @@
        <span ng-if="unchecked">
        <a style="margin-left: 5px"  class="box quick-button-small col-lg-1 col-md-2 col-xs-6" ng-click="paid()">
            <i class="fa fa-check"></i>
-           <p>完成</p>
+           <p>完成订单</p>
        </a>
        <a style="margin-left: 5px"  class="box quick-button-small col-lg-1 col-md-2 col-xs-6" ng-click="cancel()">
            <i class="fa fa-trash-o"></i>
-           <p>取消</p>
+           <p>取消订单</p>
        </a>
        </span>
 
