--- a/app/views/analysis/dailyReport/dayBillReportAnalysis.html
+++ b/app/views/analysis/dailyReport/dayBillReportAnalysis.html
@@ -3,7 +3,7 @@
         <div class="box">
             <div class="box-header">
                 <div class="row">
-                    <div class="col-xs-4">
+                    <div class="col-xs-4" style="line-height: 30px;">
                         <ol class="breadcrumb"
                             style="background-color: #36a9e1; margin: 0px; padding: 0px; padding-left: 0px; margin-bottom: 0px; margin-top: 8px; margin-left: 15px;">
                             <li><a style="color: #fff"><span ng-bind="currentViewParentName"></span></a></li>
@@ -86,7 +86,7 @@
                                             <div class="chart white" style="height: 40px;">
                                                 <div class="row">
                                                     <div class="col-lg-6">
-                                                        <span class="label label-primary" style="font-size: 15px;">现金支付:</span>
+                                                        <span class="label label-primary" style="font-size: 15px;">现金:</span>
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="cash.cash"></span>
@@ -94,7 +94,7 @@
                                                 </div>
                                                 <div class="row" style="margin-top: 10px;">
                                                     <div class="col-lg-6">
-                                                        <span class="label label-primary" style="font-size: 15px;">微信支付:</span>
+                                                        <span class="label label-primary" style="font-size: 15px;">微信:</span>
                                                     </div>
                                                     <div class="col-lg-6">
                                                         <span class="label label-info" style="font-size: 15px;" ng-bind="cash.weixin"></span>
@@ -130,56 +130,70 @@
                     <div class="col-lg-1"></div>
                 </div>
                 <hr/>
-                <h1 style="text-align: center; margin-top: 20px;">当日交易详情</h1>
+                <h1 style="text-align: center; margin-top: 20px;"></h1>
             </div>
-            <div class="box-content">
-                <div class="row">
-                    <div class="col-lg-1"></div>
-                    <div class="col-lg-10">
-                        <div class="row" style="height: 430px;">
-                            <div style="">
-                                <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
-                                    <thead>
-                                    <tr>
-                                        <th ng-repeat="field in fields">
-                                            {{field.title}}
-                                        </th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    <tr class="tr" style="" ng-repeat="entity in entities">
-                                        <td class="center" ng-repeat="field in fields">
+
+            <div class="row">
+
+                <div class="col-lg-12">
+
+                    <div class="box chat chat-full noOverflow">
+
+                        <div class="box-header">
+                            <h2>当日交易详情</h2>
+                        </div>
+                        <div class="box-content">
+                            <div class="row">
+                                <div class="col-lg-1"></div>
+                                <div class="col-lg-10">
+                                    <div class="row" style="height: 430px;">
+                                        <div style="">
+                                            <table class="table table-striped table-bordered bootstrap-datatable datatable table-hover">
+                                                <thead>
+                                                <tr>
+                                                    <th ng-repeat="field in fields">
+                                                        {{field.title}}
+                                                    </th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr class="tr" style="" ng-repeat="entity in entities">
+                                                    <td class="center" ng-repeat="field in fields">
                                 <span ng-class="entity.fieldClass[field.name]" ng-if="field.value">{{field.value(entity)}}
                                 </span>
                                 <span ng-class="entity.fieldClass[field.name]" ng-if="!field.value">{{valueOfKeyString(entity, field.name)}}
                                 </span>
-                                        </td>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                                    </td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
+                                        </div>
+                                        <div class="col-lg-12 center">
+                                            <style>
+                                                div.col-lg-12 ul > li {
+                                                    cursor: pointer;
+                                                }
+                                            </style>
+                                            <pagination total-items="pagination.iTotal" items-per-page="pagination.iLength"
+                                                        page="pagination.iPage"
+                                                        max-size="pagination.maxSize" rotate="false" previous-text="上一页"
+                                                        next-text="下一页"></pagination>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-1"></div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                显示 {{pagination.iStart}} ~ {{pagination.iEnd}} / {{pagination.iTotal}} 条
-                            </div>
-                            <div class="col-lg-12 center">
-                                <!--START:temp css for pagination-->
-                                <style>
-                                    div.col-lg-12 ul > li {
-                                        cursor: pointer;
-                                    }
-                                </style>
-                                <!--START:temp css for pagination-->
-                                <pagination total-items="pagination.iTotal" items-per-page="pagination.iLength"
-                                            page="pagination.iPage"
-                                            max-size="pagination.maxSize" rotate="false" previous-text="上一页"
-                                            next-text="下一页"></pagination>
-                            </div>
-                        </div>
+
                     </div>
-                    <div class="col-lg-1"></div>
-                </div>
+
+                </div><!--/col-->
+
             </div>
         </div>
     </div>
