--- a/app/views/analysis/dashboard.html
+++ b/app/views/analysis/dashboard.html
@@ -27,9 +27,9 @@
                             <tr style="background-color: #3c763d"><td style="text-align: center"><i style="color: white" class="fa fa-exchange fa-4x"></i><h2 style="color: white; margin-top: -3px"> 现金流(元)</h2></td>
                             </tr>
                             <tr style="height: 20px"></tr>
-                            <tr><td style="text-align: center"><h1 class="text-success" ng-click="showStat = !showStat" style="font-weight: bold; font-family: Arial; font-size: 48px;">0</h1></td>
+                            <tr><td style="text-align: center"><h1 class="text-success" ng-click="showStat = !showStat" style="font-weight: bold; font-family: Arial; font-size: 48px;">{{totalCash}}</h1></td>
                             </tr>
-                            <tr style="height: 20px"><td style="text-align: right"><h2 class="text-success"><i style="color: green" class="fa fa-arrow-up fa-1x"></i> 0%</h2> </td>
+                            <tr style="height: 20px"><td style="text-align: right"><h2 class="text-danger"><i style="color: white" class="fa fa-arrow-up fa-1x"></i></h2> </td>
                             </tr>
                         </table>
                     </div>
