--- a/app/views/analysis/dailyReport/dayBillReportAnalysis.html
+++ b/app/views/analysis/dailyReport/dayBillReportAnalysis.html
@@ -37,7 +37,7 @@
                     <div class="col-lg-10">
                         <div class="row">
                             <div class="col-lg-4 col-sm-4">
-                                <div class="smallchart duckGreen box mobileHalf">
+                                <div class="smallchart darkGreen box mobileHalf">
                                     <div class="title" style="font-size: 30px;">营业额</div>
                                     <div class="content" style="padding: 30px;">
                                         <div class="chart-stat">
