--- a/app/views/item/create.html
+++ b/app/views/item/create.html
@@ -67,7 +67,7 @@
                 </button>
             </div>
         </div>
-        <div ng-if="isShowUpload">
+  <!--      <div ng-if="isShowUpload">
             <div class="form-group">
 
                 <label class="col-lg-2 control-label">上传：</label>
@@ -109,7 +109,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
     </form>
 
     <div ng-if="info">
